# mdl

./: Folder.DotSettings
backend/: CMakeLists.txt  CMakeSettings.json  README.md
backend/src/: main.cpp
backend/src/assets/html/: index.html
backend/src/assets/html/assets/: PlayOne-6v26MF2Z.js  PlayOne-BbJ0gQKZ.js  PlayOne-D22FHsVb.js  about-CCUISBf1.js  about-CdcA2rEd.js  about-CwHWtDOd.js  addTask-BqkaiPJb.js  addTask-C5OKjHVw.js  addTask-DZ8-3mVs.js  download-BN6znYWl.js  download-D0D3RA6q.css  download-sllQlA5d.js  download-y5zYs0j1.js  home-BNoLIhPI.js  home-BxmP3fJW.js  home-Yf3Q99La.js  index-2ozpi-CX.css  index-BqJaR7h5.js  index-DHHD80ad.css  index-DIij_LeJ.js  index-DU6IfN-l.js  record-4k5OjTM7.js  record-BluMnoW0.js  record-CFi5TWhV.css  record-HtAGO5S6.js  settings-DJy9RiIU.js  settings-DmWAnRL2.js  settings-O9sz0fHE.js  tools-BXmxqTzZ.js  tools-BzoqGYsp.css  tools-C8yUWx8R.js  tools-sRPQx4P6.js  use-message-1m9-TyaD.js  use-message-CeodD0h-.js  use-message-DyujROtS.js
backend/src/config/: config.cpp
backend/src/engine/: base.h  downloader.h  lux.h  nm3u8dl.h  ytdlp.h
backend/src/utils/: js.h  sysinfo.hpp  utils.h
frontend/: README.md  bun.lockb  bunfig.toml  components.d.ts  index.html  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/components/: addRecord.vue  addTask.vue  init.vue  layout.vue
frontend/src/router/: index.js
frontend/src/views/: about.vue  download.vue  home.vue  record.vue  settings.vue  tools.vue
